Opened 13 years ago
Closed 13 years ago
#4705 closed bug (fixed)
Horizontal Scrollbar Ignores Range in BTextView
Reported by: | jan_64 | Owned by: | zooey |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The horizontal scrollbar ignores a range given to it by BTextView::SetTextRect(BRect) when the width of the TextRect is larger than the visible rectangle and word wrap is turned off.
To reproduce, open StyledEdit, turn off word wrap and type a long sentence that goes beyond the visible frame. The horizontal scrollbar does not update as expected and any non-visible text cannot be reached.
(I reproduced this bug in hrev32959 but I have heard that it still occurs in later revisions.)
Change History (4)
comment:1 by , 13 years ago
Owner: | changed from | to
---|
comment:2 by , 13 years ago
Status: | new → assigned |
---|
comment:3 by , 13 years ago
Blocking: | 4821 added |
---|
comment:3 by , 13 years ago
Blocking: | 4821 removed |
---|---|
Resolution: | → fixed |
Status: | assigned → closed |
Fixed in hrev33703.
Note:
See TracTickets
for help on using tickets.
(In #4821) This is going to be fixed as part of #4705