generally overhauled non-wrapping mode of BTextView, as it was considerably broken: * switching from wrapping to non-wrapping mode triggers a recomputation of   the text rect * non-wrapping mode now triggers updating of the data rect for the horizontal   scrollbar as needed, fixing #4705 * corrected a couple of width computations that confused bounds and text   rect width, leading to drawing artefacts at the end of a line * unified computation of text rect width to always take all lines into   account (not just the first one) * some cleanup

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33703 a95241bf-73f2-0310-859d-f6bbb57e9c96